# Smart_RadioTuner_AI

./: AI_model.py  CMakeLists.txt  README.md  WavWriter.cpp  WavWriter.h  cutter.py  filter.h  main.cpp  radio_ai.py  radio_ui.html  test_modelu.py
tests/: FilterTest.cpp  WavWriterTest.cpp  test_cutter.py
